Added feature route to delete a feature. Inclduing code and api documentation
