# routes/features_routes.js
@@ -82,12 +82,38 @@ async function addFeatures(cnx) {
     }
 }
 
+/**
+ * Function that deletes a feature by it's ID.
+ * @param {object} cnx - The request object.
+ * @returns {object} cnx - The response object.
+ */
+async function deleteById(cnx) {
+    const featureID = cnx.params.id;
+
+    // check permission if user can delete a feature
+    const permission = permissions.deleteFeature(cnx.state.user);
+
+    if (!permission.granted) {
+        // if permission is not granted
+        cnx.status = 403;
+    } else {
+        const result = await model.deleteFeatureById(featureID);
+        if (result.affectedRows > 0) {
+            cnx.status = 200;
+            cnx.body = { ID: featureID, deleted: true };
+        } else {
+            cnx.status = 501;
+            cnx.body = { ID: featureID, deleted: false };
+        }
+    }
+}
+
 // Gets
 router.get('/', getAllFeatures);
 router.get('/:id([0-9]{1,})', getAllFeaturesForProperty);
 
 // Delete
-//router.del('/:id([0-9]{1,})', auth, deleteById);
+router.del('/:id([0-9]{1,})', auth, deleteById);
 
 // Post
 router.post('/', auth, bodyParser(), validateFeatureAdd, addFeatures);
